--- a/styles/scss/products.scss
+++ b/styles/scss/products.scss
@@ -101,13 +101,13 @@
 
       @include desktop {
         border-radius: 0.25rem;
-        top: 5.1563rem;
+        top: 7.4688rem;
       }
 
       @include mobile {
         margin-left: -1rem;
         margin-right: -1rem;
-        top: 7.7813rem;
+        top: 8.1563rem;
       }
 
       @include fold {
